--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -19,6 +19,7 @@
 .search-input {
     margin-top: 1px;
     margin-bottom: 1px;
+    margin-right: 25%;
 }
 
 .loading-header {
@@ -29,7 +30,7 @@
     box-shadow: 2px 2px 2px 0 #ccc;
     box-sizing: border-box;
     display: inline-block;
-    margin: 0 0 1.5em;
+    margin: 0 0 1.2em;
     padding: .5em;
     width: 100%;
 }
