--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -14,6 +14,7 @@
 .m-logo {
     padding: 4px;
     color: #ffffff;
+    cursor: pointer;
 }
 
 .search-input {
@@ -33,6 +34,7 @@
     margin: 0 0 1.2em;
     padding: .5em;
     width: 100%;
+    cursor: pointer;
 }
 
 .gif-item img {
