--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -17,6 +17,10 @@
     cursor: pointer;
 }
 
+.m-logo-subtitle {
+    font-size: 15px;
+}
+
 .search-input {
     margin-top: 1px;
     margin-bottom: 1px;
@@ -62,12 +66,34 @@ input {
     min-width: 500px;
 }
 
+@media only screen and (min-width: 1075px) {
+    .img-item-details {
+        min-width: 700px;
+    }
+}
+
 @media only screen and (max-width: 800px) {
     .img-item-details {
-        min-width: 0px;
+        min-width: 400px;
+        max-width: 410px;
     }
+    .item-details-content-links {
+        margin-top: 10px !important;
+    }
+}
+
+@media only screen and (max-width: 700px) {
     .item-details-content {
-        display: block;
+        display: block !important;
+    }
+    .img-item-details {
+        max-width: 100%;
+        width: 700px;
+    }
+    .item-details-content-links {
+        margin-top: 5px !important;
+        margin-left: 10px !important;
+        margin-right: 10px !important;
     }
 }
 
