--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -33,6 +33,14 @@ body  {
 .search-input {
     margin-left: 60%;
     width: 100%;
+    display: flex;
+}
+
+.search-input > .search-input-filter {
+    color: white;
+    margin-top: 5px;
+    padding-right: 5px;
+    cursor: pointer;
 }
 
 .search-input > input {
@@ -47,11 +55,13 @@ body  {
 .trending-header {
     padding: 5px 0px 0px 5px;
     font-family: Marvel;
+    margin-top: 75px;
 }
 
 .results-header {
     padding: 5px 0px 0px 5px;
     font-family: Marvel;
+    margin-top: 75px;
 }
 
 .gif-item {
@@ -82,7 +92,7 @@ input {
     height: 50px;
     margin: 0 auto;
     text-align: left;
-    width: 50%;
+    width: 100%;
 }
 
 .img-item-details {
@@ -90,21 +100,21 @@ input {
     width: 1300px;
 }
 
-@media only screen and (max-width: 1600px) {
+@media only screen and (max-width: 1610px) {
     .img-item-details {
         max-width: 100%;
         width: 1100px;
     }
 }
 
-@media only screen and (max-width: 1380px) {
+@media only screen and (max-width: 1410px) {
     .img-item-details {
         max-width: 100%;
         width: 800px;
     }
 }
 
-@media only screen and (max-width: 1090px) {
+@media only screen and (max-width: 1095px) {
     .img-item-details {
         max-width: 100%;
         width: 500px;
