--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -47,13 +47,40 @@ body  {
     width: 100%;
 }
 
+.filters {
+    margin-bottom: 30px;
+    margin-left: 7px;
+    margin-right: auto;
+}
+
+.filter-item {
+    margin-right: 16px;
+    padding-bottom: 18px;
+    font-size: 20px;
+    color: #313131;
+    border-bottom: 0px solid transparent;
+    transition: all 250ms ease-out;
+    text-decoration: none;
+}
+
+.filter-item:last-child {
+    margin-right: 0;
+}
+
+.filter-item.active {
+    padding-bottom: 15px;
+    color: #EC1D24;
+    font-weight: bold;
+    border-bottom: 3px solid #EC1D24;
+}
+
 .loading-header {
-    padding: 4px;
+    padding: 7px;
     font-family: Marvel;
 }
 
 .trending-header {
-    padding: 5px 0px 0px 5px;
+    padding: 5px 0px 0px 7px;
     font-family: Marvel;
     margin-top: 75px;
 }
