--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -31,7 +31,7 @@ body  {
 }
 
 .search-input {
-    margin-left: 60%;
+    margin-left: 52.5%;
     width: 100%;
     display: flex;
 }
@@ -39,7 +39,7 @@ body  {
 .search-input > .search-input-filter {
     color: white;
     margin-top: 5px;
-    padding-right: 5px;
+    padding-right: 10px;
     cursor: pointer;
 }
 
@@ -89,7 +89,7 @@ input.range-slider {
     background: #EC1D24;
     outline: none;
     padding: 0;
-    margin: 5px;
+    margin: 9px;
     -webkit-appearance: none;
     font-family: Marvel, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
@@ -152,6 +152,46 @@ input.range-slider::-webkit-slider-thumb {
     font-size: .85em;
     margin: 1.5em 0;
     padding: 0;
+}
+
+.gif-list-adjust-2 {
+    column-gap: 1.5em;
+    font-size: .85em;
+    margin: 1.5em 0;
+    padding: 0;
+    -moz-column-count: 4;
+    -webkit-column-count: 4;
+    column-count: 4;
+}
+
+.gif-list-adjust-3 {
+    column-gap: 1.5em;
+    font-size: .85em;
+    margin: 1.5em 0;
+    padding: 0;
+    -moz-column-count: 3;
+    -webkit-column-count: 3;
+    column-count: 3;
+}
+
+.gif-list-adjust-4 {
+    column-gap: 1.5em;
+    font-size: .85em;
+    margin: 1.5em 0;
+    padding: 0;
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2;
+}
+
+.gif-list-adjust-5 {
+    column-gap: 1.5em;
+    font-size: .85em;
+    margin: 1.5em 0;
+    padding: 0;
+    -moz-column-count: 1;
+    -webkit-column-count: 1;
+    column-count: 1;
 }
 
 input {
